packages/frontend/tests/type_errors/ty_arg_count_mismatch.nemo
fn func[a, b](x : a) -> a {
  x
}

fn main() -> i32 {
  func#[i32](3);
}
